--- a/Ketch/UserInterface/Profile/ProfileView.xib
+++ b/Ketch/UserInterface/Profile/ProfileView.xib
@@ -55,6 +55,10 @@
                     <color key="pageIndicatorTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="currentPageIndicatorTintColor" red="0.25490196078431371" green="0.87058823529411766" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </pageControl>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ov3-cQ-tgW" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="308" width="320" height="346"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anastasia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTD-bt-yNd" userLabel="Name">
                     <rect key="frame" x="100" y="336" width="119" height="27"/>
                     <fontDescription key="fontDescription" name="TransatTextBold" family="Transat Text" pointSize="27"/>
@@ -103,7 +107,6 @@
                     </userDefinedRuntimeAttributes>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.2627450980392157" green="0.87058823529411766" blue="0.86274509803921573" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Gur-zm-gdr" firstAttribute="top" secondItem="05h-5P-i0C" secondAttribute="bottom" constant="12" id="1dt-Kl-kRP"/>
                 <constraint firstAttribute="centerX" secondItem="yTD-bt-yNd" secondAttribute="centerX" id="5bt-ON-gBe"/>
@@ -111,8 +114,11 @@
                 <constraint firstItem="zkL-na-OA5" firstAttribute="top" secondItem="8A2-xC-PLX" secondAttribute="top" id="AAO-mf-bzR"/>
                 <constraint firstAttribute="trailing" secondItem="Gur-zm-gdr" secondAttribute="trailing" constant="8" id="DKm-Se-bii"/>
                 <constraint firstItem="8A2-xC-PLX" firstAttribute="trailing" secondItem="zkL-na-OA5" secondAttribute="trailing" constant="16" id="EM1-Z5-VMq"/>
+                <constraint firstItem="ov3-cQ-tgW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Jye-h9-9xG"/>
                 <constraint firstItem="kHN-3G-ecZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="R2L-p1-M5h"/>
                 <constraint firstItem="8A2-xC-PLX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="S9w-jN-rTo"/>
+                <constraint firstItem="ov3-cQ-tgW" firstAttribute="top" secondItem="8A2-xC-PLX" secondAttribute="bottom" constant="-12" id="Tkz-RJ-nFZ"/>
+                <constraint firstAttribute="bottom" secondItem="ov3-cQ-tgW" secondAttribute="bottom" id="XFC-e1-Htr"/>
                 <constraint firstItem="8A2-xC-PLX" firstAttribute="bottom" secondItem="zkL-na-OA5" secondAttribute="bottom" id="Y5O-HR-SSS"/>
                 <constraint firstItem="05h-5P-i0C" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="Yse-zK-vQX"/>
                 <constraint firstItem="gjP-E3-fDY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Yzx-aN-Im6"/>
@@ -125,6 +131,7 @@
                 <constraint firstItem="Gur-zm-gdr" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="jgS-XF-Jyl"/>
                 <constraint firstItem="yTD-bt-yNd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="r40-D1-7dM"/>
                 <constraint firstItem="gjP-E3-fDY" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="sDc-68-dW8"/>
+                <constraint firstAttribute="trailing" secondItem="ov3-cQ-tgW" secondAttribute="trailing" id="u2K-gR-IXE"/>
                 <constraint firstItem="8A2-xC-PLX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ykK-pk-1th"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
