--- a/Ketch/UserInterface/NewConnection/NewConnectionView.xib
+++ b/Ketch/UserInterface/NewConnection/NewConnectionView.xib
@@ -60,12 +60,18 @@
                         </mask>
                     </variation>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background-sea-short" translatesAutoresizingMaskIntoConstraints="NO" id="yQA-Zd-Dv2">
-                    <rect key="frame" x="0.0" y="340" width="320" height="228"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yQA-Zd-Dv2" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="340" width="320" height="580"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="yQA-Zd-Dv2" secondAttribute="height" multiplier="80:57" id="G6Q-cb-JFH"/>
                     </constraints>
-                </imageView>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="G6Q-cb-JFH"/>
+                        </mask>
+                    </variation>
+                </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I2c-Q5-UHl" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="20" y="375" width="280" height="96"/>
                     <constraints>
@@ -126,35 +132,20 @@
                 <constraint firstItem="KwU-Ms-43D" firstAttribute="centerX" secondItem="EUJ-Zq-AGV" secondAttribute="centerX" id="2OL-M7-nhK"/>
                 <constraint firstItem="yQA-Zd-Dv2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="2e7-P1-I3E"/>
                 <constraint firstItem="9yM-PF-CD5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="35c-ze-uG5"/>
+                <constraint firstItem="N9q-8D-Tto" firstAttribute="top" secondItem="I2c-Q5-UHl" secondAttribute="bottom" constant="17" id="3qy-A6-K4d"/>
                 <constraint firstItem="I2c-Q5-UHl" firstAttribute="top" secondItem="yQA-Zd-Dv2" secondAttribute="top" constant="35" id="5xb-Ag-aiq"/>
-                <constraint firstItem="N9q-8D-Tto" firstAttribute="top" secondItem="yQA-Zd-Dv2" secondAttribute="bottom" constant="-87.5" id="9Wz-aK-Jbf"/>
                 <constraint firstItem="9yM-PF-CD5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Hqj-hG-Nsd"/>
                 <constraint firstItem="KwU-Ms-43D" firstAttribute="width" secondItem="yQA-Zd-Dv2" secondAttribute="width" multiplier="1:3.2" id="NU2-G2-uZ0"/>
-                <constraint firstAttribute="bottom" secondItem="yQA-Zd-Dv2" secondAttribute="bottom" id="P31-LU-MgV"/>
-                <constraint firstItem="KwU-Ms-43D" firstAttribute="top" secondItem="EUJ-Zq-AGV" secondAttribute="bottom" constant="40" id="QeE-4m-Dgs"/>
-                <constraint firstItem="I2c-Q5-UHl" firstAttribute="centerX" secondItem="yQA-Zd-Dv2" secondAttribute="centerX" id="RLw-lP-uMl"/>
+                <constraint firstItem="KwU-Ms-43D" firstAttribute="top" secondItem="EUJ-Zq-AGV" secondAttribute="bottom" constant="85" id="PCC-qX-pzb"/>
                 <constraint firstItem="yQA-Zd-Dv2" firstAttribute="top" secondItem="KwU-Ms-43D" secondAttribute="bottom" constant="-16" id="TxB-zp-fe2"/>
                 <constraint firstItem="yQA-Zd-Dv2" firstAttribute="centerX" secondItem="I2c-Q5-UHl" secondAttribute="centerX" id="WYc-6J-C8A"/>
                 <constraint firstItem="KwU-Ms-43D" firstAttribute="centerX" secondItem="yQA-Zd-Dv2" secondAttribute="centerX" id="Wj6-8e-GU1"/>
-                <constraint firstItem="yQA-Zd-Dv2" firstAttribute="top" secondItem="I2c-Q5-UHl" secondAttribute="bottom" constant="45" id="Z6N-2t-7dv"/>
                 <constraint firstAttribute="trailing" secondItem="yQA-Zd-Dv2" secondAttribute="trailing" id="ZKu-Nx-bmP"/>
-                <constraint firstItem="yQA-Zd-Dv2" firstAttribute="bottom" secondItem="N9q-8D-Tto" secondAttribute="bottom" constant="30" id="awx-MS-5S4"/>
                 <constraint firstItem="yQA-Zd-Dv2" firstAttribute="centerX" secondItem="N9q-8D-Tto" secondAttribute="centerX" id="myi-cf-7ui"/>
                 <constraint firstItem="EUJ-Zq-AGV" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="140" id="uUi-bm-G4P"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="QeE-4m-Dgs"/>
-                    <exclude reference="Z6N-2t-7dv"/>
-                    <exclude reference="RLw-lP-uMl"/>
-                    <exclude reference="9Wz-aK-Jbf"/>
-                </mask>
-            </variation>
-            <point key="canvasLocation" x="302" y="319"/>
+            <point key="canvasLocation" x="74" y="317"/>
         </view>
     </objects>
-    <resources>
-        <image name="background-sea-short" width="320" height="228"/>
-    </resources>
 </document>
